# botgame

./: .gitmodules  CMakeLists.txt
game/: CMakeLists.txt  basebillboardent.cpp  basebillboardent.h  baseentity.cpp  baseentity.h  basesystem.h  camera.cpp  camera.h  cell.cpp  cell.h  cube.fs  cube.vs  gameinfo.h  imguibackend.cpp  imguibackend.h  log.cpp  log.h  main.cpp  materials.cpp  materials.h  physics.cpp  physics.h  player.cpp  player.h  primitivedraw.cpp  primitivedraw.h  renderer.cpp  renderer.h  shadermanager.cpp  shadermanager.h  shaders.cpp  shaders.h  textures.cpp  textures.h  tileset.fs  transform.cpp  transform.h  utils.cpp  utils.h  world.cpp  (+1 more)
